namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: hmedel
    labels:
      app: webapp
