ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  namespace: hmedel
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.hmedel.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: servicio-app
            port:
              number: 80
